src/objects/inscor__AvSight_Support_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>inscor__Disable_Owner_Code_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Owner Code Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Disable_RO_Line_Shipped_Validations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable RO Line Shipped Validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Disable_Validation_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Validation Triggers?</label>
        <type>Checkbox</type>
    </fields>
    <label>AvSight Support Settings</label>
    <pluralLabel>AvSight Support Settings</pluralLabel>
</CustomObject>